# cerialize

./: .gitignore  CMakeLists.txt  README.md  build.sh  run_tests.sh  test.sh
.github/workflows/: c-cpp.yml
include/: cerealize.h  cerialize.h
test/: README.md  tests.c
test/cases/: test_bool.h  test_list.h  test_memory.h  test_null.h  test_number.h  test_object.h  test_serialize.h  test_string.h
test/helpers/: test_output_helper.c  test_output_helper.h  test_utils.h
